--- a/lang/en_us.yml
+++ b/lang/en_us.yml
@@ -5,7 +5,9 @@ lazybing_thb:
       text: |
         §7-----§r {name} v{ver} §7-----§r
         TPA & Home & Back Plugin for MCDReforged
-        §7{home_prefix}§r Show this help message
+        §7{home_prefix} help§r Show this help message
+        §7{home_prefix} default §e<name>§r Set a home site as default home
+        §7{home_prefix}§r Teleport to your default home site
         §7{home_prefix} reload§r Reload this plugin
         §7{home_prefix} list§r List all your home site
         §7{home_prefix} §e<name>§r Teleport to a home site
@@ -14,6 +16,7 @@ lazybing_thb:
         §7{tpa_prefix}§r Accept a teleport request
         §7{tpa_prefix} §6<player>§r Request teleport to §6<player>§r
         §7{tpc_prefix}§r Decline a teleport request
+        §7{tpo_prefix}§r §6<player>§r Teleport to §6<player>§r directly
         §7{back_prefix}§r Undo a recent teleport action
       hover: Click to suggest {}
 
@@ -56,6 +59,9 @@ lazybing_thb:
     added_home_site: Home site §b§l{}§r added successfully (slots used §e{}§7/§6{}§r)
     home_site_not_exists: Home site named "{}" not exists
     home_site_removed: Home site §b§l{}§r removed (slots used §e{}§7/§6{}§r)
+
+    default_home_success: Successfully set default home to §b§l{}§r
+    default_not_exist: Default home not exist
 
   back:
     expire_warn:
